--- a/donor-entry.html
+++ b/donor-entry.html
@@ -3,15 +3,16 @@
 <head>
     <title>Galloners Club - Donor Entry</title>
     <meta charset="UTF-8">
+
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: #f4f4f4;
+            background-color: #f4f4f4;
         }
 
         header {
-            background: #b30000;
+            background-color: #b30000;
             color: white;
             padding: 15px;
             text-align: center;
@@ -24,28 +25,80 @@
         }
 
         .container {
-            max-width: 600px;
+            max-width: 500px;
             margin: 30px auto;
             background: white;
-            padding: 20px;
+            padding: 25px;
             border-radius: 10px;
             box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
         }
 
-        input, select {
+        h2 {
+            text-align: center;
+            color: #b30000;
+        }
+
+        .blood-types {
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        .blood-btn {
+            padding: 8px 15px;
+            margin: 5px;
+            border: none;
+            border-radius: 5px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .type-a { background-color: blue; color: white; }
+        .type-b { background-color: yellow; color: black; }
+        .type-o { background-color: white; color: black; border: 1px solid #ccc; }
+        .type-ab { background-color: pink; color: black; }
+
+        /* ADDED RH BUTTON STYLE */
+        .rh-btn {
+            padding: 6px 12px;
+            margin: 3px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            background-color: #666;
+            color: white;
+        }
+
+        input {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             margin: 8px 0;
-            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
 
         button {
-            padding: 8px 12px;
-            background: #b30000;
-            color: white;
+            width: 100%;
+            padding: 10px;
             border: none;
-            border-radius: 4px;
+            border-radius: 5px;
+            font-weight: bold;
             cursor: pointer;
+            margin-top: 10px;
+        }
+
+        .save-btn {
+            background-color: #b30000;
+            color: white;
+        }
+
+        .tracking-btn {
+            background-color: #ff4d4d;
+            color: white;
+        }
+
+        .back-btn {
+            background-color: gray;
+            color: white;
         }
     </style>
 </head>
@@ -59,77 +112,88 @@
 
 <div class="container">
 
+    <!-- Blood Type Section -->
+    <div class="blood-types">
+        <p><strong>Select Blood Type:</strong></p>
+
+        <button class="blood-btn type-a" onclick="setBloodType('A')">Type A</button>
+        <div>
+            <button class="rh-btn" onclick="setRh('+')">Positive (+)</button>
+            <button class="rh-btn" onclick="setRh('-')">Negative (-)</button>
+        </div>
+
+        <button class="blood-btn type-b" onclick="setBloodType('B')">Type B</button>
+        <div>
+            <button class="rh-btn" onclick="setRh('+')">Positive (+)</button>
+            <button class="rh-btn" onclick="setRh('-')">Negative (-)</button>
+        </div>
+
+        <button class="blood-btn type-o" onclick="setBloodType('O')">Type O</button>
+        <div>
+            <button class="rh-btn" onclick="setRh('+')">Positive (+)</button>
+            <button class="rh-btn" onclick="setRh('-')">Negative (-)</button>
+        </div>
+
+        <button class="blood-btn type-ab" onclick="setBloodType('AB')">Type AB</button>
+        <div>
+            <button class="rh-btn" onclick="setRh('+')">Positive (+)</button>
+            <button class="rh-btn" onclick="setRh('-')">Negative (-)</button>
+        </div>
+    </div>
+
+    <input type="hidden" id="bloodType">
+    <input type="hidden" id="rhFactor">
+
     <input type="text" id="firstName" placeholder="First Name">
     <input type="text" id="middleName" placeholder="Middle Name">
     <input type="text" id="surname" placeholder="Surname">
-
-    <!-- ORIGINAL BLOOD TYPE FIELD (UNCHANGED) -->
-    <select id="bloodType">
-        <option value="">Select Blood Type</option>
-        <option value="A">A</option>
-        <option value="B">B</option>
-        <option value="AB">AB</option>
-        <option value="O">O</option>
-    </select>
-
-    <!-- ADDED POSITIVE / NEGATIVE OPTION BELOW BLOOD TYPE -->
-    <select id="rhFactor">
-        <option value="">Select Positive / Negative</option>
-        <option value="Positive">Positive (+)</option>
-        <option value="Negative">Negative (-)</option>
-    </select>
-
+    <input type="date" id="birthday">
     <input type="text" id="contact" placeholder="Contact Number">
+    <input type="text" id="serial" placeholder="Serial Number">
 
-    <button onclick="saveDonor()">Save</button>
+    <button class="save-btn" onclick="saveDonor()">Save Donor</button>
+    <button class="tracking-btn" onclick="goTracking()">Go to Tracking</button>
+    <button class="back-btn" onclick="goBack()">Back to Dashboard</button>
 
 </div>
 
 <script>
-
-function saveDonor(){
-    let donors = JSON.parse(localStorage.getItem("donors")) || [];
-
-    let donorData = {
-        firstName: document.getElementById("firstName").value,
-        middleName: document.getElementById("middleName").value,
-        surname: document.getElementById("surname").value,
-        bloodType: document.getElementById("bloodType").value,
-        rhFactor: document.getElementById("rhFactor").value,
-        contact: document.getElementById("contact").value,
-        serials: []
-    };
-
-    let editIndex = localStorage.getItem("editIndex");
-
-    if(editIndex !== null){
-        donorData.serials = donors[editIndex].serials || [];
-        donors[editIndex] = donorData;
-        localStorage.removeItem("editIndex");
-    } else {
-        donors.push(donorData);
+    function setBloodType(type) {
+        document.getElementById("bloodType").value = type;
+        alert("Blood Type " + type + " Selected");
     }
 
-    localStorage.setItem("donors", JSON.stringify(donors));
-    window.location.href = "tracking.html";
-}
-
-window.onload = function(){
-    let editIndex = localStorage.getItem("editIndex");
-    let donors = JSON.parse(localStorage.getItem("donors")) || [];
-
-    if(editIndex !== null){
-        let donor = donors[editIndex];
-
-        document.getElementById("firstName").value = donor.firstName || "";
-        document.getElementById("middleName").value = donor.middleName || "";
-        document.getElementById("surname").value = donor.surname || "";
-        document.getElementById("bloodType").value = donor.bloodType || "";
-        document.getElementById("rhFactor").value = donor.rhFactor || "";
-        document.getElementById("contact").value = donor.contact || "";
+    function setRh(rh) {
+        document.getElementById("rhFactor").value = rh;
+        alert("Rh Factor " + rh + " Selected");
     }
-};
 
+    function saveDonor() {
+        var donor = {
+            bloodType: document.getElementById("bloodType").value,
+            rhFactor: document.getElementById("rhFactor").value,
+            firstName: document.getElementById("firstName").value,
+            middleName: document.getElementById("middleName").value,
+            surname: document.getElementById("surname").value,
+            birthday: document.getElementById("birthday").value,
+            contact: document.getElementById("contact").value,
+            serial: document.getElementById("serial").value
+        };
+
+        var donors = JSON.parse(localStorage.getItem("donors")) || [];
+        donors.push(donor);
+        localStorage.setItem("donors", JSON.stringify(donors));
+
+        alert("Donor Saved Successfully!");
+    }
+
+    function goBack() {
+        window.location.href = "dashboard.html";
+    }
+
+    function goTracking() {
+        window.location.href = "tracking.html";
+    }
 </script>
 
 </body>
