--- a/tracking.html
+++ b/tracking.html
@@ -3,8 +3,13 @@
 <head>
     <title>Galloners Club - Tracking</title>
     <meta charset="UTF-8">
+
     <style>
-        body { margin:0; font-family:Arial; background:#f4f4f4; }
+        body {
+            margin:0;
+            font-family:Arial;
+            background:#f4f4f4;
+        }
 
         header {
             background:#b30000;
@@ -13,7 +18,11 @@
             text-align:center;
         }
 
-        .logo { width:100px; display:block; margin:10px auto; }
+        .logo {
+            width:100px;
+            display:block;
+            margin:10px auto;
+        }
 
         .container {
             max-width:95%;
@@ -24,7 +33,10 @@
             box-shadow:0 3px 10px rgba(0,0,0,0.1);
         }
 
-        table { width:100%; border-collapse:collapse; }
+        table {
+            width:100%;
+            border-collapse:collapse;
+        }
 
         th, td {
             padding:8px;
@@ -32,7 +44,10 @@
             text-align:center;
         }
 
-        th { background:#b30000; color:white; }
+        th {
+            background:#b30000;
+            color:white;
+        }
 
         button {
             padding:5px 8px;
@@ -43,10 +58,22 @@
             color:white;
         }
 
-        .edit-btn { background:#2196F3; }
-        .delete-btn { background:#f44336; }
-        .view-btn { background:#9c27b0; }
-        .filter-btn { background:#555; }
+        .edit-btn { background:#1565c0; }
+        .delete-btn { background:#c62828; }
+        .view-btn { background:#6a1b9a; }
+
+        /* UPDATED FILTER BUTTON COLORS */
+        .galloner-btn { background:#1e88e5; color:white; }
+        .bronze-btn   { background:#cd7f32; color:white; }
+        .silver-btn   { background:#9e9e9e; color:white; }
+        .gold-btn     { background:#d4af37; color:black; }
+
+        .filter-btn {
+            background:#222;
+            color:white;
+            font-weight:bold;
+        }
+
     </style>
 </head>
 
@@ -59,21 +86,33 @@
 
 <div class="container">
 
-<!-- ADDED SEARCH + EXPORT + RETURN -->
+<!-- SEARCH -->
 <input type="text" id="searchInput" placeholder="Search donor..."
 onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
 
-<button onclick="exportToGoogleSheet()">Export to Google Sheet</button>
+<!-- EXPORT -->
+<button onclick="exportToGoogleSheet()">Export CSV</button>
 <button onclick="goDashboard()">Return to Dashboard</button>
 
 <br><br>
 
+<!-- BLOOD TYPE FILTER -->
+<select id="bloodFilter" onchange="renderTable()">
+    <option value="">All Blood Types</option>
+    <option value="A">A</option>
+    <option value="B">B</option>
+    <option value="AB">AB</option>
+    <option value="O">O</option>
+</select>
+
+<br><br>
+
 <!-- CATEGORY BUTTONS -->
-<button class="filter-btn" onclick="filterByCategory('galloner')">Galloners</button>
-<button class="filter-btn" onclick="filterByCategory('bronze')">Bronze</button>
-<button class="filter-btn" onclick="filterByCategory('silver')">Silver</button>
-<button class="filterByCategory('gold')" onclick="filterByCategory('gold')">Gold</button>
-<button onclick="renderTable()">Show All</button>
+<button class="galloner-btn" onclick="filterByCategory('galloner')">Galloners</button>
+<button class="bronze-btn" onclick="filterByCategory('bronze')">Bronze</button>
+<button class="silver-btn" onclick="filterByCategory('silver')">Silver</button>
+<button class="gold-btn" onclick="filterByCategory('gold')">Gold</button>
+<button class="filter-btn" onclick="renderTable()">Show All</button>
 
 <br><br>
 
@@ -95,26 +134,31 @@ onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
 
 <script>
 
-function renderTable(filteredType=null){
+function renderTable(category=null){
     let donors = JSON.parse(localStorage.getItem("donors")) || [];
     let table = document.getElementById("donorTable");
+    let selectedBloodType = document.getElementById("bloodFilter").value;
     table.innerHTML = "";
 
     donors.forEach((donor,index)=>{
         let serialCount = donor.serials ? donor.serials.length : 0;
 
-        if(filteredType){
-            if(filteredType==="galloner" && serialCount<8) return;
-            if(filteredType==="bronze" && serialCount<28) return;
-            if(filteredType==="silver" && serialCount<46) return;
-            if(filteredType==="gold" && serialCount<70) return;
+        if(selectedBloodType !== "" && donor.bloodType !== selectedBloodType){
+            return;
+        }
+
+        if(category){
+            if(category==="galloner" && serialCount<8) return;
+            if(category==="bronze" && serialCount<28) return;
+            if(category==="silver" && serialCount<46) return;
+            if(category==="gold" && serialCount<70) return;
         }
 
         table.innerHTML += `
         <tr>
             <td>${index+1}</td>
             <td>${donor.firstName} ${donor.middleName} ${donor.surname}</td>
-            <td>${donor.bloodType || ""}</td>
+            <td>${donor.bloodType || ""} ${donor.rhFactor || ""}</td>
             <td>${donor.contact || ""}</td>
             <td>
                 ${serialCount}
@@ -136,6 +180,16 @@ function filterByCategory(type){
     renderTable(type);
 }
 
+function searchDonor(){
+    let input=document.getElementById("searchInput").value.toLowerCase();
+    let rows=document.querySelectorAll("#donorTable tr");
+
+    rows.forEach(row=>{
+        let text=row.innerText.toLowerCase();
+        row.style.display=text.includes(input)?"":"none";
+    });
+}
+
 function toggleSerial(index){
     let donors = JSON.parse(localStorage.getItem("donors")) || [];
     let row = document.getElementById("serialRow"+index);
@@ -149,11 +203,7 @@ function toggleSerial(index){
             container.innerHTML="No serial numbers.";
         }else{
             serials.forEach((s,i)=>{
-                container.innerHTML += `
-                ${s.number} 
-                <button class="delete-btn" onclick="deleteSerial(${index},${i})">
-                Delete
-                </button><br>`;
+                container.innerHTML += `${s.number}<br>`;
             });
         }
 
@@ -161,13 +211,6 @@ function toggleSerial(index){
     }else{
         row.style.display="none";
     }
-}
-
-function deleteSerial(donorIndex,serialIndex){
-    let donors = JSON.parse(localStorage.getItem("donors")) || [];
-    donors[donorIndex].serials.splice(serialIndex,1);
-    localStorage.setItem("donors",JSON.stringify(donors));
-    renderTable();
 }
 
 function deleteDonor(index){
@@ -182,30 +225,34 @@ function editDonor(index){
     window.location.href="donor-entry.html";
 }
 
-function searchDonor(){
-    let input=document.getElementById("searchInput").value.toLowerCase();
-    let rows=document.querySelectorAll("#donorTable tr");
-
-    rows.forEach(row=>{
-        let text=row.innerText.toLowerCase();
-        row.style.display=text.includes(input)?"":"none";
-    });
-}
-
-function exportToGoogleSheet(){
-    let donors=JSON.parse(localStorage.getItem("donors"))||[];
-
-    fetch("YOUR_GOOGLE_SCRIPT_URL",{
-        method:"POST",
-        body:JSON.stringify(donors),
-        headers:{"Content-Type":"application/json"}
-    })
-    .then(()=>alert("Exported successfully"))
-    .catch(()=>alert("Export failed"));
-}
-
 function goDashboard(){
     window.location.href="dashboard.html";
+}
+
+/* UPDATED EXPORT FUNCTION - DOWNLOAD CSV */
+function exportToGoogleSheet() {
+    let donors = JSON.parse(localStorage.getItem("donors")) || [];
+
+    let csv = "Blood Type,Rh Factor,First Name,Middle Name,Surname,Birthday,Contact\n";
+
+    donors.forEach(donor => {
+        csv += 
+            (donor.bloodType || "") + "," +
+            (donor.rhFactor || "") + "," +
+            (donor.firstName || "") + "," +
+            (donor.middleName || "") + "," +
+            (donor.surname || "") + "," +
+            (donor.birthday || "") + "," +
+            (donor.contact || "") + "\n";
+    });
+
+    let blob = new Blob([csv], { type: "text/csv" });
+    let url = window.URL.createObjectURL(blob);
+    let a = document.createElement("a");
+    a.href = url;
+    a.download = "donors.csv";
+    a.click();
+    window.URL.revokeObjectURL(url);
 }
 
 renderTable();
