--- a/tracking.html
+++ b/tracking.html
@@ -1,38 +1,78 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tracking</title>
+    <title>Galloners Club - Tracking</title>
+    <meta charset="UTF-8">
 
     <style>
         body {
-            font-family: Arial, sans-serif;
+            margin:0;
+            font-family:Arial;
+            background:#f4f4f4;
+        }
+
+        header {
+            background:#b30000;
+            color:white;
+            padding:15px;
+            text-align:center;
+        }
+
+        .logo {
+            width:100px;
+            display:block;
+            margin:10px auto;
+        }
+
+        .container {
+            max-width:95%;
+            margin:20px auto;
+            background:white;
+            padding:20px;
+            border-radius:10px;
+            box-shadow:0 3px 10px rgba(0,0,0,0.1);
         }
 
         table {
-            width: 100%;
-            border-collapse: collapse;
+            width:100%;
+            border-collapse:collapse;
         }
 
         th, td {
-            border: 1px solid #ccc;
-            padding: 8px;
-            text-align: left;
+            padding:8px;
+            border:1px solid #ddd;
+            text-align:center;
         }
 
         th {
-            background-color: #f2f2f2;
+            background:#b30000;
+            color:white;
         }
 
         button {
-            padding: 6px 10px;
-            cursor: pointer;
+            padding:5px 8px;
+            margin:2px;
+            border:none;
+            border-radius:4px;
+            cursor:pointer;
+            color:white;
         }
 
-        /* ONLY CHANGE — RED BUTTONS WITH WHITE TEXT */
-        #exportBtn,
-        #returnDashboardBtn {
-            background-color: red !important;
-            color: white !important;
+        .edit-btn { background:#1565c0; }
+        .delete-btn { background:#c62828; }
+        .view-btn { background:#6a1b9a; }
+
+        /* UPDATED FILTER BUTTON COLORS */
+        .galloner-btn { background:#1e88e5; color:white; }
+        .bronze-btn   { background:#cd7f32; color:white; }
+        .silver-btn   { background:#9e9e9e; color:white; }
+        .gold-btn     { background:#d4af37; color:black; }
+
+        .filter-btn {
+            background:#222;
+            color:white;
+            font-weight:bold;
         }
 
     </style>
@@ -40,81 +80,185 @@
 
 <body>
 
+<header>
+    <img src="images/logo.png" class="logo">
     <h2>Donor Tracking</h2>
+</header>
 
-    <!-- Buttons -->
-    <button id="exportBtn" onclick="exportToGoogleSheet()">Export to CSV</button>
-    <button id="returnDashboardBtn" onclick="window.location.href='dashboard.html'">
-        Return to Dashboard
-    </button>
+<div class="container">
 
-    <br><br>
+<!-- SEARCH -->
+<input type="text" id="searchInput" placeholder="Search donor..."
+onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
 
-    <!-- Table -->
-    <table>
-        <thead>
-            <tr>
-                <th>Blood Type</th>
-                <th>Rh</th>
-                <th>Name</th>
-                <th>Birthday</th>
-                <th>Contact</th>
-                <th>Serial</th>
-            </tr>
-        </thead>
-        <tbody id="donorTable">
-        </tbody>
-    </table>
+<!-- EXPORT -->
+<button onclick="exportToGoogleSheet()">Export CSV</button>
+<button onclick="goDashboard()">Return to Dashboard</button>
 
-    <script>
-        function loadDonors() {
-            let donors = JSON.parse(localStorage.getItem("donors")) || [];
-            let table = document.getElementById("donorTable");
-            table.innerHTML = "";
+<br><br>
 
-            donors.forEach(donor => {
-                let row = `
-                    <tr>
-                        <td>${donor.bloodType || ""}</td>
-                        <td>${donor.rhFactor || ""}</td>
-                        <td>${donor.firstName || ""} ${donor.middleName || ""} ${donor.surname || ""}</td>
-                        <td>${donor.birthday || ""}</td>
-                        <td>${donor.contact || ""}</td>
-                        <td>${donor.serial || ""}</td>
-                    </tr>
-                `;
-                table.innerHTML += row;
+<!-- BLOOD TYPE FILTER -->
+<select id="bloodFilter" onchange="renderTable()">
+    <option value="">All Blood Types</option>
+    <option value="A">A</option>
+    <option value="B">B</option>
+    <option value="AB">AB</option>
+    <option value="O">O</option>
+</select>
+
+<br><br>
+
+<!-- CATEGORY BUTTONS -->
+<button class="galloner-btn" onclick="filterByCategory('galloner')">Galloners</button>
+<button class="bronze-btn" onclick="filterByCategory('bronze')">Bronze</button>
+<button class="silver-btn" onclick="filterByCategory('silver')">Silver</button>
+<button class="gold-btn" onclick="filterByCategory('gold')">Gold</button>
+<button class="filter-btn" onclick="renderTable()">Show All</button>
+
+<br><br>
+
+<table>
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Blood Type</th>
+            <th>Contact</th>
+            <th>Serial Count</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody id="donorTable"></tbody>
+</table>
+
+</div>
+
+<script>
+
+function renderTable(category=null){
+    let donors = JSON.parse(localStorage.getItem("donors")) || [];
+    let table = document.getElementById("donorTable");
+    let selectedBloodType = document.getElementById("bloodFilter").value;
+    table.innerHTML = "";
+
+    donors.forEach((donor,index)=>{
+        let serialCount = donor.serials ? donor.serials.length : 0;
+
+        if(selectedBloodType !== "" && donor.bloodType !== selectedBloodType){
+            return;
+        }
+
+        if(category){
+            if(category==="galloner" && serialCount<8) return;
+            if(category==="bronze" && serialCount<28) return;
+            if(category==="silver" && serialCount<46) return;
+            if(category==="gold" && serialCount<70) return;
+        }
+
+        table.innerHTML += `
+        <tr>
+            <td>${index+1}</td>
+            <td>${donor.firstName} ${donor.middleName} ${donor.surname}</td>
+            <td>${donor.bloodType || ""} ${donor.rhFactor || ""}</td>
+            <td>${donor.contact || ""}</td>
+            <td>
+                ${serialCount}
+                <button class="view-btn" onclick="toggleSerial(${index})">View</button>
+            </td>
+            <td>
+                <button class="edit-btn" onclick="editDonor(${index})">Edit</button>
+                <button class="delete-btn" onclick="deleteDonor(${index})">Delete</button>
+            </td>
+        </tr>
+        <tr id="serialRow${index}" style="display:none;">
+            <td colspan="6" id="serialList${index}"></td>
+        </tr>
+        `;
+    });
+}
+
+function filterByCategory(type){
+    renderTable(type);
+}
+
+function searchDonor(){
+    let input=document.getElementById("searchInput").value.toLowerCase();
+    let rows=document.querySelectorAll("#donorTable tr");
+
+    rows.forEach(row=>{
+        let text=row.innerText.toLowerCase();
+        row.style.display=text.includes(input)?"":"none";
+    });
+}
+
+function toggleSerial(index){
+    let donors = JSON.parse(localStorage.getItem("donors")) || [];
+    let row = document.getElementById("serialRow"+index);
+    let container = document.getElementById("serialList"+index);
+
+    if(row.style.display==="none"){
+        let serials = donors[index].serials || [];
+        container.innerHTML = "";
+
+        if(serials.length===0){
+            container.innerHTML="No serial numbers.";
+        }else{
+            serials.forEach((s,i)=>{
+                container.innerHTML += `${s.number}<br>`;
             });
         }
 
-        function exportToGoogleSheet() {
-            let donors = JSON.parse(localStorage.getItem("donors")) || [];
+        row.style.display="table-row";
+    }else{
+        row.style.display="none";
+    }
+}
 
-            let csv = "Blood Type,Rh Factor,First Name,Middle Name,Surname,Birthday,Contact,Serial\n";
+function deleteDonor(index){
+    let donors = JSON.parse(localStorage.getItem("donors")) || [];
+    donors.splice(index,1);
+    localStorage.setItem("donors",JSON.stringify(donors));
+    renderTable();
+}
 
-            donors.forEach(donor => {
-                csv += 
-                    (donor.bloodType || "") + "," +
-                    (donor.rhFactor || "") + "," +
-                    (donor.firstName || "") + "," +
-                    (donor.middleName || "") + "," +
-                    (donor.surname || "") + "," +
-                    (donor.birthday || "") + "," +
-                    (donor.contact || "") + "," +
-                    (donor.serial || "") + "\n";
-            });
+function editDonor(index){
+    localStorage.setItem("editIndex", index);
+    window.location.href="donor-entry.html";
+}
 
-            let blob = new Blob([csv], { type: "text/csv" });
-            let url = window.URL.createObjectURL(blob);
-            let a = document.createElement("a");
-            a.href = url;
-            a.download = "donors.csv";
-            a.click();
-            window.URL.revokeObjectURL(url);
-        }
+function goDashboard(){
+    window.location.href="dashboard.html";
+}
 
-        loadDonors();
-    </script>
+/* UPDATED EXPORT FUNCTION - DOWNLOAD CSV */
+function exportToGoogleSheet() {
+    let donors = JSON.parse(localStorage.getItem("donors")) || [];
+
+    let csv = "Blood Type,Rh Factor,First Name,Middle Name,Surname,Birthday,Contact\n";
+
+    donors.forEach(donor => {
+        csv += 
+            (donor.bloodType || "") + "," +
+            (donor.rhFactor || "") + "," +
+            (donor.firstName || "") + "," +
+            (donor.middleName || "") + "," +
+            (donor.surname || "") + "," +
+            (donor.birthday || "") + "," +
+            (donor.contact || "") + "\n";
+    });
+
+    let blob = new Blob([csv], { type: "text/csv" });
+    let url = window.URL.createObjectURL(blob);
+    let a = document.createElement("a");
+    a.href = url;
+    a.download = "donors.csv";
+    a.click();
+    window.URL.revokeObjectURL(url);
+}
+
+renderTable();
+
+</script>
 
 </body>
 </html>
