--- a/donor-entry.html
+++ b/donor-entry.html
@@ -1,199 +1,166 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Galloners Club - Donor Entry</title>
-    <meta charset="UTF-8">
-
+    <title>Donor Entry</title>
     <style>
         body {
-            margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
         }
 
-        header {
-            background-color: #b30000;
-            color: white;
-            padding: 15px;
-            text-align: center;
-        }
-
-        .logo {
-            width: 100px;
-            display: block;
-            margin: 10px auto;
-        }
-
-        .container {
-            max-width: 500px;
-            margin: 30px auto;
-            background: white;
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
-        }
-
-        h2 {
-            text-align: center;
-            color: #b30000;
-        }
-
-        .blood-types {
-            text-align: center;
-            margin-bottom: 15px;
-        }
-
-        .blood-btn {
-            padding: 8px 15px;
-            margin: 5px;
-            border: none;
-            border-radius: 5px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .type-a { background-color: blue; color: white; }
-        .type-b { background-color: yellow; color: black; }
-        .type-o { background-color: white; color: black; border: 1px solid #ccc; }
-        .type-ab { background-color: pink; color: black; }
-
-        /* ADDED RH BUTTON STYLE */
-        .rh-btn {
-            padding: 6px 12px;
-            margin: 3px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            background-color: #666;
-            color: white;
-        }
-
-        input {
-            width: 100%;
-            padding: 10px;
-            margin: 8px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        input, select {
+            padding: 5px;
+            margin: 5px 0;
         }
 
         button {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            font-weight: bold;
+            padding: 5px 10px;
             cursor: pointer;
-            margin-top: 10px;
         }
 
-        .save-btn {
-            background-color: #b30000;
-            color: white;
-        }
-
-        .tracking-btn {
-            background-color: #ff4d4d;
-            color: white;
-        }
-
-        .back-btn {
-            background-color: gray;
-            color: white;
+        .form-group {
+            margin-bottom: 15px;
         }
     </style>
 </head>
 
 <body>
 
-<header>
-    <img src="images/logo.png" class="logo">
-    <h2>Donor Entry</h2>
-</header>
+<h2>Donor Entry</h2>
 
-<div class="container">
+<form id="donorForm">
 
-    <!-- Blood Type Section -->
-    <div class="blood-types">
-        <p><strong>Select Blood Type:</strong></p>
+    <div class="form-group">
+        <label>First Name</label><br>
+        <input type="text" id="firstName">
+    </div>
 
-        <button class="blood-btn type-a" onclick="setBloodType('A')">Type A</button>
-        <div>
-            <button class="rh-btn" onclick="setRh('+')">Positive (+)</button>
-            <button class="rh-btn" onclick="setRh('-')">Negative (-)</button>
-        </div>
+    <div class="form-group">
+        <label>Middle Name</label><br>
+        <input type="text" id="middleName">
+    </div>
 
-        <button class="blood-btn type-b" onclick="setBloodType('B')">Type B</button>
-        <div>
-            <button class="rh-btn" onclick="setRh('+')">Positive (+)</button>
-            <button class="rh-btn" onclick="setRh('-')">Negative (-)</button>
-        </div>
+    <div class="form-group">
+        <label>Surname</label><br>
+        <input type="text" id="surname">
+    </div>
 
-        <button class="blood-btn type-o" onclick="setBloodType('O')">Type O</button>
-        <div>
-            <button class="rh-btn" onclick="setRh('+')">Positive (+)</button>
-            <button class="rh-btn" onclick="setRh('-')">Negative (-)</button>
-        </div>
+    <div class="form-group">
+        <label>Birthday</label><br>
+        <input type="date" id="birthday">
+    </div>
 
-        <button class="blood-btn type-ab" onclick="setBloodType('AB')">Type AB</button>
-        <div>
-            <button class="rh-btn" onclick="setRh('+')">Positive (+)</button>
-            <button class="rh-btn" onclick="setRh('-')">Negative (-)</button>
+    <div class="form-group">
+        <label>Contact Number</label><br>
+        <input type="text" id="contact">
+    </div>
+
+    <!-- Blood Type + Rh (HORIZONTAL) -->
+    <div class="form-group">
+        <div style="display:flex; align-items:center; gap:20px;">
+            
+            <div>
+                <label>Blood Type</label><br>
+                <select id="bloodType">
+                    <option value="">Select</option>
+                    <option value="A">A</option>
+                    <option value="B">B</option>
+                    <option value="AB">AB</option>
+                    <option value="O">O</option>
+                </select>
+            </div>
+
+            <div style="margin-top:22px;">
+                <label>
+                    <input type="radio" name="rhFactor" value="Positive"> Positive
+                </label>
+
+                <label style="margin-left:10px;">
+                    <input type="radio" name="rhFactor" value="Negative"> Negative
+                </label>
+            </div>
+
         </div>
     </div>
 
-    <input type="hidden" id="bloodType">
-    <input type="hidden" id="rhFactor">
+    <!-- Serial with + button -->
+    <div class="form-group">
+        <label>Serial Number</label><br>
+        <div style="display:flex; gap:10px; align-items:center;">
+            <input type="text" id="serialInput">
+            <input type="date" id="serialDate">
+            <button type="button" onclick="addSerial()">+</button>
+        </div>
 
-    <input type="text" id="firstName" placeholder="First Name">
-    <input type="text" id="middleName" placeholder="Middle Name">
-    <input type="text" id="surname" placeholder="Surname">
-    <input type="date" id="birthday">
-    <input type="text" id="contact" placeholder="Contact Number">
-    <input type="text" id="serial" placeholder="Serial Number">
+        <div id="serialList"></div>
+    </div>
 
-    <button class="save-btn" onclick="saveDonor()">Save Donor</button>
-    <button class="tracking-btn" onclick="goTracking()">Go to Tracking</button>
-    <button class="back-btn" onclick="goBack()">Back to Dashboard</button>
+    <button type="button" onclick="saveDonor()">Save</button>
 
-</div>
+</form>
 
 <script>
-    function setBloodType(type) {
-        document.getElementById("bloodType").value = type;
-        alert("Blood Type " + type + " Selected");
+
+let serials = [];
+
+function addSerial() {
+    let serialValue = document.getElementById("serialInput").value;
+    let dateValue = document.getElementById("serialDate").value;
+
+    if (serialValue === "" || dateValue === "") {
+        alert("Enter serial and date");
+        return;
     }
 
-    function setRh(rh) {
-        document.getElementById("rhFactor").value = rh;
-        alert("Rh Factor " + rh + " Selected");
-    }
+    serials.push({
+        serial: serialValue,
+        date: dateValue
+    });
 
-    function saveDonor() {
-        var donor = {
-            bloodType: document.getElementById("bloodType").value,
-            rhFactor: document.getElementById("rhFactor").value,
-            firstName: document.getElementById("firstName").value,
-            middleName: document.getElementById("middleName").value,
-            surname: document.getElementById("surname").value,
-            birthday: document.getElementById("birthday").value,
-            contact: document.getElementById("contact").value,
-            serial: document.getElementById("serial").value
-        };
+    displaySerials();
 
-        var donors = JSON.parse(localStorage.getItem("donors")) || [];
-        donors.push(donor);
-        localStorage.setItem("donors", JSON.stringify(donors));
+    document.getElementById("serialInput").value = "";
+    document.getElementById("serialDate").value = "";
+}
 
-        alert("Donor Saved Successfully!");
-    }
+function displaySerials() {
+    let container = document.getElementById("serialList");
+    container.innerHTML = "";
 
-    function goBack() {
-        window.location.href = "dashboard.html";
-    }
+    serials.forEach((item) => {
+        container.innerHTML += `
+            <div>
+                ${item.serial} - ${item.date}
+            </div>
+        `;
+    });
+}
 
-    function goTracking() {
-        window.location.href = "tracking.html";
-    }
+function saveDonor() {
+
+    let rh = document.querySelector('input[name="rhFactor"]:checked');
+    let rhValue = rh ? rh.value : "";
+
+    let donor = {
+        firstName: document.getElementById("firstName").value,
+        middleName: document.getElementById("middleName").value,
+        surname: document.getElementById("surname").value,
+        birthday: document.getElementById("birthday").value,
+        contact: document.getElementById("contact").value,
+        bloodType: document.getElementById("bloodType").value,
+        rhFactor: rhValue,
+        serials: serials
+    };
+
+    let donors = JSON.parse(localStorage.getItem("donors")) || [];
+    donors.push(donor);
+    localStorage.setItem("donors", JSON.stringify(donors));
+
+    alert("Donor Saved");
+    document.getElementById("donorForm").reset();
+    serials = [];
+    document.getElementById("serialList").innerHTML = "";
+}
+
 </script>
 
 </body>
