--- a/tracking.html
+++ b/tracking.html
@@ -62,6 +62,9 @@
         .delete-btn { background:#c62828; }
         .view-btn { background:#6a1b9a; }
 
+        /* MATCHED RED HEADER COLOR */
+        .top-btn { background:#b30000; }
+
         .galloner-btn { background:#1e88e5; color:white; }
         .bronze-btn   { background:#cd7f32; color:white; }
         .silver-btn   { background:#9e9e9e; color:white; }
@@ -88,8 +91,8 @@
 <input type="text" id="searchInput" placeholder="Search donor..."
 onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
 
-<button onclick="exportToGoogleSheet()">Export CSV</button>
-<button onclick="goDashboard()">Return to Dashboard</button>
+<button class="top-btn" onclick="exportToGoogleSheet()">Export CSV</button>
+<button class="top-btn" onclick="goDashboard()">Return to Dashboard</button>
 
 <br><br>
 
@@ -185,10 +188,10 @@ function toggleSerial(index){
         }else{
             serials.forEach((s,i)=>{
                 container.innerHTML += `
-                ${s.number || ""} 
-                <button class="edit-btn" onclick="editSerial(${index},${i})">Edit</button>
-                <button class="delete-btn" onclick="deleteSerial(${index},${i})">Delete</button>
-                <br><br>
+                    Serial: ${s.number || ""}
+                    <button class="edit-btn" onclick="editSerial(${index},${i})">Edit</button>
+                    <button class="delete-btn" onclick="deleteSerial(${index},${i})">Delete</button>
+                    <br><br>
                 `;
             });
         }
@@ -201,6 +204,7 @@ function toggleSerial(index){
 
 function editDonor(index){
     localStorage.setItem("editIndex", index);
+    localStorage.removeItem("editSerialIndex"); // FIX repopulate conflict
     window.location.href="donor-entry.html";
 }
 
