--- a/donor-entry.html
+++ b/donor-entry.html
@@ -164,13 +164,17 @@ function saveDonor() {
 
     if(editIndex !== null){
         donors[editIndex] = donorData;
-        localStorage.removeItem("editIndex");
     } else {
         donors.push(donorData);
     }
 
     localStorage.setItem("donors", JSON.stringify(donors));
-    window.location.href="tracking.html";
+
+    // FIX: always clear editIndex after saving
+    localStorage.removeItem("editIndex");
+
+    // Redirect to tracking page
+    window.location.href = "tracking.html";
 }
 
 function goBack(){
